# bolting_and_molting_with_rust_an_anarchist_coding_cook_book

./: .gitignore  readme.md
chapter_01/examples/test-app/: Cargo.toml
chapter_01/examples/test-app/src/: main.rs
chapter_02/: readme.md
chapter_02/examples/test-app/: Cargo.toml
chapter_02/examples/test-app/src/: main.rs
chapter_03/: readme.md
chapter_03/examples/test-app/src/: main.rs
chapter_04/examples/test-app/src/: main.rs
chapter_05/: readme.md
chapter_05/examples/01/test-app/: Cargo.toml
chapter_05/sections/01/: readme.md
chapter_06/: readme.md
chapter_06/examples/02/: readme.md
chapter_06/examples/02/test-app/: Cargo.toml
chapter_06/examples/test-app/: Cargo.toml
chapter_06/examples/test-app/src/: main.rs
chapter_07/examples/01/test-app/: Cargo.toml
chapter_08/: readme.md
chapter_08/examples/01/task-execution/: Cargo.toml
chapter_09/: readme.md
chapter_09/examples/test-app/: Cargo.toml
chapter_09/examples/test-app/src/: main.rs
chapter_11/: readme.md
chapter_11/examples/proc_macros/: Cargo.toml
chapter_11/examples/test-app/: Cargo.toml
chapter_11/examples/test-app/src/: main.rs
chapter_11/examples/test-app/src/utils/: mod.rs  utils.rs
chapter_12/: readme.md
chapter_12/examples/test-app/: Cargo.toml
chapter_15/examples/rust_with_golang/: build.sh
chapter_15/examples/rust_with_python/: build.sh  pyproject.toml  readme.md  setup.py
chapter_15/examples/rust_with_python/python/: example.py
chapter_15/examples/rust_with_python/rust/: Cargo.toml
chapter_15/examples/rust_with_python/rust/src/: lib.rs  main.rs
(+55 files in other folders)
